* SVN *

* Find articles in a section in Liquid

  {{ section | latest_articles }}
  
  {{ 'about' | find_section | latest_article | assign_to: 'bio' }}
  <div>{{ bio.body }}</div>

* Find section by path in Liquid

  {{ 'about' | find_section }}

* Support for assigning liquid variables.

  {{ 5 | assign_to: 'age' }} sets age = 5
  {{ site.tags | assign_to 'tags' }} sets tags = site.tags

* Liquid include tag support [Geoff Davis]

  {% include 'foo' %} includes the '_foo.liquid' template.

* Experimental MetaWeblog Support [Corey Donohue, Patrick Lenz]

* Added 'my' option to format_date for use with archive_date

* Added archive_date liquid tag for archive view

* Change comments so that the text filter is taken from the site, not the article

* Integrate referenced page caching into the app.

* Add Comment validations and better error messages [Geoff Davis]

* Changed published_at_for to use ordinalized string

* Changed published_at_for to use :mdy and :plain

* 0.6.1 *

* Use ActionController::AbstractRequest.relative_url_root for sites under a root path like /blog

* fix odd timezone bug when saving articles

* fix bug with <typo:code> macro

* bad feed urls raise ActiveRecord::RecordNotFound, and return 404 in production

* dont bomb out on comment events without an event body

* fix bug where you're unable to delete an empty comment

* Ignore drafts and articles published in the future when searching.

* sanitize posted comments

* Fix bug where atom feed content from textile was double encoded

* sanitize atom feed content

* 0.6 *

* Change conversion scripts to use Mephisto.convert_from instead:

  Mephisto.convert_from :typo

* Added spinner graphic for asset searches from article page

* Added link to the public homepage

* Added spinner graphics for search request in assets area

* Added icons for video, audio, and other docs

* [CHANGED] Changed {{ article.body }} and added {{ article.content }}
