@@ -1,15 +1,21 @@
 * SVN *
 
+* remove 'pages' and 'comments' variables in page/single template types.  Instead use 'section.pages' and 'article.comments', respectively.
+
+* Find child sections of a section
+
+  {{ 'projects' | child_sections }} # => any sections with a path like projects/*
+
 * Find articles in a section in Liquid
 
   {{ section | latest_articles }}
   
-  {{ 'about' | find_section | latest_article | assign_to: 'bio' }}
+  {{ 'about' | section | latest_article | assign_to: 'bio' }}
   <div>{{ bio.body }}</div>
 
 * Find section by path in Liquid
 
-  {{ 'about' | find_section }}
+  {{ 'about' | section }}
 
 * Support for assigning liquid variables.
 
